--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aeb071">  <td>24/11/19 11:49:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.setUp()[pri:0, instance:eauctionFlow.Login@231f98ef]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1825719826</td>   <td></td> </tr>
-<tr bgcolor="aeb071">  <td>24/11/19 11:49:29</td>   <td>4256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testLogin()[pri:0, instance:eauctionFlow.Login@231f98ef]">testLogin</td> 
-  <td>main@1825719826</td>   <td></td> </tr>
+<tr bgcolor="aeb071">  <td>24/11/19 18:01:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BidderRegistration.tearDown()[pri:0, instance:eauctionFlow.BidderRegistration@183ec003]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="aeb071">  <td>24/11/19 18:01:20</td>   <td>-13557</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BidderRegistration.setUp()[pri:0, instance:eauctionFlow.BidderRegistration@183ec003]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="aeb071">  <td>24/11/19 18:01:27</td>   <td>-7227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BidderRegistration.testBidderRegistration()[pri:0, instance:eauctionFlow.BidderRegistration@183ec003]">testBidderRegistration</td> 
+  <td>main@575935098</td>   <td></td> </tr>
 </table>
