--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aeb071">  <td>24/11/19 18:01:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BidderRegistration.tearDown()[pri:0, instance:eauctionFlow.BidderRegistration@183ec003]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aeb071">  <td>24/11/19 18:01:20</td>   <td>-13557</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BidderRegistration.setUp()[pri:0, instance:eauctionFlow.BidderRegistration@183ec003]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@575935098</td>   <td></td> </tr>
-<tr bgcolor="aeb071">  <td>24/11/19 18:01:27</td>   <td>-7227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BidderRegistration.testBidderRegistration()[pri:0, instance:eauctionFlow.BidderRegistration@183ec003]">testBidderRegistration</td> 
-  <td>main@575935098</td>   <td></td> </tr>
+<tr bgcolor="aeb071">  <td>24/11/26 18:42:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEvent.tearDown()[pri:0, instance:eauctionFlow.CreateEvent@7d9d0818]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109839984</td>   <td></td> </tr>
+<tr bgcolor="aeb071">  <td>24/11/26 18:42:49</td>   <td>-62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEvent.testLogin()[pri:1, instance:eauctionFlow.CreateEvent@7d9d0818]">testLogin</td> 
+  <td>main@2109839984</td>   <td></td> </tr>
+<tr bgcolor="aeb071">  <td>24/11/26 18:42:49</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEvent.createEvent()[pri:2, instance:eauctionFlow.CreateEvent@7d9d0818]">createEvent</td> 
+  <td>main@2109839984</td>   <td></td> </tr>
+<tr bgcolor="aeb071">  <td>24/11/26 18:42:45</td>   <td>-3203</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEvent.setUp()[pri:0, instance:eauctionFlow.CreateEvent@7d9d0818]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2109839984</td>   <td></td> </tr>
 </table>
